--- a/25-seats.qmd
+++ b/25-seats.qmd
@@ -19,6 +19,12 @@ Like X-11, SEATS uses a forecast extended series, in order to obtain unbiased re
 Unlike X-11, however, SEATS filters are derived from the ARIMA model of the time series.
 While X-11 filters are predefined and fixed, the SEATS filters are different for each ARIMA model.
 
+While X-11 offers a finite set of filters (in fact, there are exactly seven filters available), SEATS offers an infinte set of filters.
+Overall, they cover a broader set of possilbe filter lengths, which makes SEATS a more flexilble option than X-11.
+**The available set filter lengths is the most crucial difference between X-11 and SEATS**.
+At the same time, the additional flexibility may lead at times to filters that are undedesirable.
+As will be shown later on, SEATS sometimes choose a filter that is too narrow, and produces an overly volatile seasonal component.
+
 ::: callout-note
 ## Comparing X-11 and SEATS filters
 
@@ -76,6 +82,16 @@ These revisions will only last for a small number of years due to the shorter fi
 Values of $\Theta$ close to one yield a seasonal adjustment filter that has seasonal factors that change slowly over time.
 This provides less smoothing but relatively small revisions.
 Any revisions that do occur will last for a longer period of time due to the longer filters.
+
+Overall, we may think of SEATS filters as a broader, more flexible set of filters than X-11 filers.
+While we have just seven filters in X-11, we have an infite numer of filters in SEATS.
+They cover a larger range of filters spans, ranging from filters that are much narrower than X-11 to filters that are much wider.
+
+SEATS greatest stength is also its greatest weakness.
+As we will see in the example below, SEATS sometimes chooses a filter that is very narrow.
+From a SEATS perspective, this makes sense: Given an ARIMA model with a very weak seasonality, the filter lengths should be chooses narrowly.
+From a practical perspective, the resulting seasonal component is undesirable.
+It is too volatile, essentially catching much of the irregular component and making the resulting seasonally adjusted series too smooth.
 
 ## Transitory component
 
@@ -232,3 +248,17 @@ For some series, the variance can be different based on the month or season.
 For example, U.S.
 Housing Starts is more variable in the winter months than in the summer due to the differences in warm and cold winters.
 ARIMA model-based seasonal adjustment does not handle this situation very well and assumes a constant variance and the SEATS adjustment wont compensate for this.
+
+### Reasons for using SEATS or X11 (Work in progress)
+
+-   When applied properly (good ARIMA model, filters are not too narrow), it produces a seasonal component that is more stable.
+    This leads to less revisions in the resulting series.
+
+-   When applied improperly (bad ARIMA model, narrow filters), it produces an unpredictable seasonal component and an overly smooth seasonally adjusted series.
+
+-   X-11 is more 'robust': If applied without additional checks, it is probably the better option.
+
+-   If you check SEATS models carefully, it may produce a more stable adjstument.
+
+To sum op, wheter you should use SEATS or X11 also depends on how much work you are willing to invest in a series.
+SEATS needs more love, etc.
