--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -1,17 +1,17 @@
-## Outliers {#sec-outliers}
+# Outliers {#sec-outliers}
 
 ```{r}
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("drafting")  # drafting, polishing, complete
+status("drafting") # drafting, polishing, complete
 ```
 
 <!-- -   Why care about outliers? -->
 
 <!-- -   Additive outliers, level shifts, temporary changes -->
 
-### Introduction
+## Introduction
 
 Exceptional data value, or outliers may constitute a problem both for the ARIMA model building as well as for the sesonal filtering.
 When analyzing time series data, outlier values are common.
@@ -28,7 +28,7 @@ X-13 offers several ways to model outliers. In this chapter, we will focus on tw
 
 
 
-### Level Shift
+## Level Shift
 
 The first outlier category we look at are level shifts. Level shifts refers to a sudden and sustained change in the underlying level of a time series.
 Theree can be various causes of level shifts in time series data, such as changes in concepts or definitions of the survey population, alterations in the method of data collection, shifts in economic behavior, changes in legislation, etc. Below is an example of a level shift:
@@ -47,7 +47,7 @@ TODO explain example
 
 
 
-### Level Shift
+## Level Shift
 
 The first outlier category we look at are level shifts. Level shifts refers to a sudden and sustained change in the underlying level of a time series.
 Theree can be various causes of level shifts in time series data, such as changes in concepts or definitions of the survey population, alterations in the method of data collection, shifts in economic behavior, changes in legislation, etc. Below is an example of a level shift:
@@ -67,7 +67,7 @@ TODO explain example
 
 
 
-### Additive Outliers
+## Additive Outliers
 
 An additive outlier is a data point that falls outside the general pattern of the trend and seasonal component in a time series. Outliers can be caused by random effects, such as an extreme irregular point, or by identifiable factors, such as a strike or bad weather.
 
@@ -82,7 +82,7 @@ Seasonally adjusting the data above, without allowing for the outliers, gives th
 TODO
 
 
-### Identifiying Outliers
+## Identifiying Outliers
 
 X-13 contains an outomated outlier detection procedure that works well in most circumstances and can be used as a starting poing. Plotting the series may add additional information on wheter outliers should be adjusted or not.
 
@@ -109,7 +109,7 @@ Therefore, it's crucial to conduct visual checks of the NSA and SA series to ide
 
 
 
-### Additional tools to identify outliers
+## Additional tools to identify outliers
 
 Idenfifying level shifts and additive outliers is no always as obvious as in the example above.
 The following tables may help to identify the level shifts and additive outliers
@@ -122,7 +122,7 @@ These tables show the month- on-month (or quarter-on-quarter) changes in the ori
 - Additive outliers can be detected by analysing Table C17 and D13 in addition to Table E5 and E6 in the output. In fact, an additive outlier will appear as one or more zeros in the period of the outlier in Table C17, which gives the final weights for the irregular component, and as a residual pattern of the irregular component presented in Table D13. In addition to inspecting these four output tables, M1, M2 and M3 statistics should be checked. M1, M2 and M3 each measure the level of the irregular component in the series compared to the trend and the seasonal components. If these fail it may indicate that outliers need to be replaced as temporary prior adjustments.
 
 
-### Confirming the reason for the level shifts or the additive outliers
+## Confirming the reason for the level shifts or the additive outliers
 
 TODO (From ONS Manual)
 
