--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -5,6 +5,8 @@
 #| echo: false
 source("_common.R")
 status("drafting") # drafting, polishing, complete
+library(seasonal)
+library(tsbox)
 ```
 
 <!-- -   Why care about outliers? -->
@@ -13,7 +15,7 @@ status("drafting") # drafting, polishing, complete
 
 ## Introduction
 
-Exceptional data value, or outliers may constitute a problem both for the ARIMA model building as well as for the sesonal filtering.
+Exceptional data values, or *outliers*, constitute a problem both for the ARIMA model building as well as for the seasonal filtering.
 When analyzing time series data, outlier values are common.
 In some cases, these issues can be linked to actual events in the real world, such as:
 
@@ -24,47 +26,49 @@ In some cases, these issues can be linked to actual events in the real world, su
 
 These events can impact the accuracy of seasonal adjustment. As a result, X-13 tries to remove these inconsistencies before performing seasonal adjustment.
 
+For example, when running `seas()` on `AirPassengers` with default settings, X-13 detects an additive outlier in may 1951. This additive outlier is removed in the regARIMA part but will be readded to the final, seasonally adjusted series.
+
+```{r}
+m <- seas(AirPassengers)
+summary(m)
+```
+The `plot()` method highlights the outlier values and marks them accordingly:
+
+```{r}
+plot(m)
+```
+
+
+The default settings discovered a single, additive outlier. Using the `outlier.critical` argument, we can fine tune the detection prosses. With `outlier.critical = 3`, we set a lower bar for the detection of outliers. `outlier.critical` is the z-value of a particular value that is needed to be classified as an outlier. A value of three means that the z-value must be 3 or larger.
+
+```{r}
+m_high <- seas(AirPassengers, outlier.critical = 3)
+summary(m_high)
+```
+With `outlier.critical = 3`, we see additive outliers in January 1950, May 1951 and February 1954. In addition, we also see level shifts in June 1953 and April 1960. Note that all z-values are larger than 3.
+
 X-13 offers several ways to model outliers. In this chapter, we will focus on two most important types of effects that can occur in time series data: level shifts and additive outliers. By understanding these effects and how to address them, analysts can improve the quality of their analyses and draw more accurate conclusions from the data.
 
-
-
 ## Level Shift
 
 The first outlier category we look at are level shifts. Level shifts refers to a sudden and sustained change in the underlying level of a time series.
-Theree can be various causes of level shifts in time series data, such as changes in concepts or definitions of the survey population, alterations in the method of data collection, shifts in economic behavior, changes in legislation, etc. Below is an example of a level shift:
+There can be various causes of level shifts in time series data, such as changes in concepts or definitions of the survey population, alterations in the method of data collection, shifts in economic behavior, changes in legislation, etc. Level shifts are a problem for seasonal adjustment because they will distort the estimation of the seasonal factors. 
 
-TODO
-
-
-Level shifts are a problem for seasonal adjustment because they will distort the estimation of the seasonal factors.
+Below is an example of a manually specified level shift:
 
 
+```{r}
+m_level_shift <- seas(
+  AirPassengers,
+  regression.variables = "ls1953.Jun",
+  outlier = NULL
+)
+summary(m_level_shift)
+```
 
-Within X-13, the initial trend is calculated by applying a moving average to the series. If there is an abrupt change in the level of the series, the estimates will be distorted. The estimates before the level shift will be underestimated, and those after will be overestimated. As the calculation of the irregular and seasonal components follow on from this initial trend-cycle estimation, they may be distorted as well.
+We use the `regression.variables` argument to manually specify a levelshift. Since we want to deactivate the automated outlier detection from above, we speficy `outlier = NULL`.
 
-TODO explain example
-
-
-
-
-## Level Shift
-
-The first outlier category we look at are level shifts. Level shifts refers to a sudden and sustained change in the underlying level of a time series.
-Theree can be various causes of level shifts in time series data, such as changes in concepts or definitions of the survey population, alterations in the method of data collection, shifts in economic behavior, changes in legislation, etc. Below is an example of a level shift:
-
-TODO
-
-
-Level shifts are a problem for seasonal adjustment because they will distort the estimation of the seasonal factors.
-
-
-
-Within X-13, the initial trend is calculated by applying a moving average to the series. If there is an abrupt change in the level of the series, the estimates will be distorted. The estimates before the level shift will be underestimated, and those after will be overestimated. As the calculation of the irregular and seasonal components follow on from this initial trend-cycle estimation, they may be distorted as well.
-
-TODO explain example
-
-
-
+Level shifts are a problem for seasonal adjustment because they will distort the estimation of the seasonal factors. Within X-13, the initial trend is calculated by applying a moving average to the series. If there is an abrupt change in the level of the series, the estimates will be distorted. The estimates before the level shift will be underestimated, and those after will be overestimated. As the calculation of the irregular and seasonal components follow on from this initial trend-cycle estimation, they may be distorted as well.
 
 
 ## Additive Outliers
@@ -73,39 +77,31 @@ An additive outlier is a data point that falls outside the general pattern of th
 
 Additive outliers pose a significant challenge to seasonal adjustment methods, which rely on moving averages. The crux of the problem lies in the inherent sensitivity of averages to the presence of extreme values or outliers. When unusual data points are included, the average can become unrepresentative of the underlying pattern in the series. Without proper adjustments or allowances for outliers, estimates for all the components in a time series can become distorted. As such, addressing additive outliers is critical to maintaining the integrity of seasonal adjustment techniques and ensuring accurate analyses.
 
+Below is an example of a manually specified additive outlier:
 
+```{r}
+m_additive_outlier <- seas(
+  AirPassengers,
+  regression.variables = "ao1954.Feb",
+  outlier = NULL
+)
+summary(m_additive_outlier)
+```
 
-TODO example
-
-Seasonally adjusting the data above, without allowing for the outliers, gives the following results:
-
-TODO
-
-
-## Identifiying Outliers
-
-X-13 contains an outomated outlier detection procedure that works well in most circumstances and can be used as a starting poing. Plotting the series may add additional information on wheter outliers should be adjusted or not.
-
-TODO
-
-series{title="Example of level shift and outlier search"
-       start=1994.1
-       period=4
-       file="mydata.txt"}
-arima{model=(0,1,1)(0,1,1)}
-outlier{types=(ao ls)
-        span=(2002.2, )
-x11{mode=mult}
-
-The outlier specification in the arima model allows for automatic detection of level shifts and additive outliers, either individually or in combination. Once identified, the outliers are incorporated into the model as "Automatically Identified Outliers" along with appropriate regression variables.
-
-It's important to note that this specification has some limitations. Specifically, it can only detect outliers with a high critical value for their t-statistics. The critical value used depends on the number of observations searched for outliers. For instance, if the search is conducted for the last year of data, the critical value is 3.16, which is higher than the standard critical value of 1.96. Consequently, outliers with t-statistics between 1.96 and 3.16 may not be detected with this option.
-
-Therefore, it's crucial to conduct visual checks of the NSA and SA series to identify any outliers that might have been missed by the automatic detection process. For more information on the default critical values for outlier identification, refer to the X-13 Reference Manual.
+Again, we use the `regression.variables` argument to manually specify an addtive outlier. Since we want to deactivate the automated outlier detection from above, we speficy `outlier = NULL`.
 
 
 
+## Manually Identifiying Outliers
 
+X-13 contains an outomated outlier detection procedure that works well in most circumstances and can be used as a starting poing. Plotting the series may add additional information on wheter outliers should be adjusted or not. The `identify()` method opens a window that allows you to manually identify outliers. Select or deselect outliers by point and click. To quit and return the call, press ESC. Click several times to loop through different outlier types.
+
+```{r}
+m <- seas(
+  AirPassengers
+)
+identify(m)
+```
 
 
 
