--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -19,43 +19,55 @@ Exceptional data values, or *outliers*, constitute a problem both for the ARIMA 
 When analyzing time series data, outlier values are common.
 In some cases, these issues can be linked to actual events in the real world, such as:
 
-- the COVID-19 pandamemic
-- the 2008/09 financial market crash
-- Natural disasters
-- Ukraine crisis
+-   the COVID-19 pandemic
+-   the 2008/09 financial market crash
+-   Natural disasters
+-   Ukraine crisis
 
-These events can impact the accuracy of seasonal adjustment. As a result, X-13 tries to remove these inconsistencies before performing seasonal adjustment.
+These events can impact the accuracy of seasonal adjustment.
+As a result, X-13 tries to remove these inconsistencies before performing seasonal adjustment.
 
-For example, when running `seas()` on `AirPassengers` with default settings, X-13 detects an additive outlier in may 1951. This additive outlier is removed in the regARIMA part but will be readded to the final, seasonally adjusted series.
+For example, when running `seas()` on `AirPassengers` with default settings, X-13 detects an additive outlier in may 1951.
+This additive outlier is removed in the regARIMA part but will be readded to the final, seasonally adjusted series.
 
 ```{r}
 m <- seas(AirPassengers)
 summary(m)
 ```
+
 The `plot()` method highlights the outlier values and marks them accordingly:
 
 ```{r}
 plot(m)
 ```
 
-
-The default settings discovered a single, additive outlier. Using the `outlier.critical` argument, we can fine tune the detection prosses. With `outlier.critical = 3`, we set a lower bar for the detection of outliers. `outlier.critical` is the z-value of a particular value that is needed to be classified as an outlier. A value of three means that the z-value must be 3 or larger.
+The default settings discovered a single, additive outlier.
+Using the `outlier.critical` argument, we can fine tune the detection prosses.
+With `outlier.critical = 3`, we set a lower bar for the detection of outliers.
+`outlier.critical` is the z-value of a particular value that is needed to be classified as an outlier.
+A value of three means that the z-value must be 3 or larger.
 
 ```{r}
 m_high <- seas(AirPassengers, outlier.critical = 3)
 summary(m_high)
 ```
-With `outlier.critical = 3`, we see additive outliers in January 1950, May 1951 and February 1954. In addition, we also see level shifts in June 1953 and April 1960. Note that all z-values are larger than 3.
 
-X-13 offers several ways to model outliers. In this chapter, we will focus on two most important types of effects that can occur in time series data: level shifts and additive outliers. By understanding these effects and how to address them, analysts can improve the quality of their analyses and draw more accurate conclusions from the data.
+With `outlier.critical = 3`, we see additive outliers in January 1950, May 1951 and February 1954.
+In addition, we also see level shifts in June 1953 and April 1960.
+Note that all z-values are larger than 3.
+
+X-13 offers several ways to model outliers.
+In this chapter, we will focus on two most important types of effects that can occur in time series data: level shifts and additive outliers.
+By understanding these effects and how to address them, analysts can improve the quality of their analyses and draw more accurate conclusions from the data.
 
 ## Level Shift
 
-The first outlier category we look at are level shifts. Level shifts refers to a sudden and sustained change in the underlying level of a time series.
-There can be various causes of level shifts in time series data, such as changes in concepts or definitions of the survey population, alterations in the method of data collection, shifts in economic behavior, changes in legislation, etc. Level shifts are a problem for seasonal adjustment because they will distort the estimation of the seasonal factors. 
+The first outlier category we look at are level shifts.
+Level shifts refers to a sudden and sustained change in the underlying level of a time series.
+There can be various causes of level shifts in time series data, such as changes in concepts or definitions of the survey population, alterations in the method of data collection, shifts in economic behavior, changes in legislation, etc.
+Level shifts are a problem for seasonal adjustment because they will distort the estimation of the seasonal factors.
 
 Below is an example of a manually specified level shift:
-
 
 ```{r}
 m_level_shift <- seas(
@@ -66,16 +78,25 @@ m_level_shift <- seas(
 summary(m_level_shift)
 ```
 
-We use the `regression.variables` argument to manually specify a levelshift. Since we want to deactivate the automated outlier detection from above, we speficy `outlier = NULL`.
+We use the `regression.variables` argument to manually specify a level-shift.
+Since we want to deactivate the automated outlier detection from above, we specify `outlier = NULL`.
 
-Level shifts are a problem for seasonal adjustment because they will distort the estimation of the seasonal factors. Within X-13, the initial trend is calculated by applying a moving average to the series. If there is an abrupt change in the level of the series, the estimates will be distorted. The estimates before the level shift will be underestimated, and those after will be overestimated. As the calculation of the irregular and seasonal components follow on from this initial trend-cycle estimation, they may be distorted as well.
-
+Level shifts are a problem for seasonal adjustment because they will distort the estimation of the seasonal factors.
+Within X-13, the initial trend is calculated by applying a moving average to the series.
+If there is an abrupt change in the level of the series, the estimates will be distorted.
+The estimates before the level shift will be underestimated, and those after will be overestimated.
+As the calculation of the irregular and seasonal components follow on from this initial trend-cycle estimation, they may be distorted as well.
 
 ## Additive Outliers
 
-An additive outlier is a data point that falls outside the general pattern of the trend and seasonal component in a time series. Outliers can be caused by random effects, such as an extreme irregular point, or by identifiable factors, such as a strike or bad weather.
+An additive outlier is a data point that falls outside the general pattern of the trend and seasonal component in a time series.
+Outliers can be caused by random effects, such as an extreme irregular point, or by identifiable factors, such as a strike or bad weather.
 
-Additive outliers pose a significant challenge to seasonal adjustment methods, which rely on moving averages. The crux of the problem lies in the inherent sensitivity of averages to the presence of extreme values or outliers. When unusual data points are included, the average can become unrepresentative of the underlying pattern in the series. Without proper adjustments or allowances for outliers, estimates for all the components in a time series can become distorted. As such, addressing additive outliers is critical to maintaining the integrity of seasonal adjustment techniques and ensuring accurate analyses.
+Additive outliers pose a significant challenge to seasonal adjustment methods, which rely on moving averages.
+The crux of the problem lies in the inherent sensitivity of averages to the presence of extreme values or outliers.
+When unusual data points are included, the average can become unrepresentative of the underlying pattern in the series.
+Without proper adjustments or allowances for outliers, estimates for all the components in a time series can become distorted.
+As such, addressing additive outliers is critical to maintaining the integrity of seasonal adjustment techniques and ensuring accurate analyses.
 
 Below is an example of a manually specified additive outlier:
 
@@ -88,13 +109,17 @@ m_additive_outlier <- seas(
 summary(m_additive_outlier)
 ```
 
-Again, we use the `regression.variables` argument to manually specify an addtive outlier. Since we want to deactivate the automated outlier detection from above, we speficy `outlier = NULL`.
+Again, we use the `regression.variables` argument to manually specify an additive outlier.
+Since we want to deactivate the automated outlier detection from above, we specify `outlier = NULL`.
 
+## Manually Identifying Outliers
 
-
-## Manually Identifiying Outliers
-
-X-13 contains an outomated outlier detection procedure that works well in most circumstances and can be used as a starting poing. Plotting the series may add additional information on wheter outliers should be adjusted or not. The `identify()` method opens a window that allows you to manually identify outliers. Select or deselect outliers by point and click. To quit and return the call, press ESC. Click several times to loop through different outlier types.
+X-13 contains an automated outlier detection procedure that works well in most circumstances and can be used as a starting point.
+Plotting the series may add additional information on whether outliers should be adjusted or not.
+The `identify()` method opens a window that allows you to manually identify outliers.
+Select or deselect outliers by point and click.
+To quit and return the call, press ESC.
+Click several times to loop through different outlier types.
 
 ```{r}
 m <- seas(
@@ -103,28 +128,28 @@ m <- seas(
 identify(m)
 ```
 
-
-
 ## Additional tools to identify outliers
 
-Idenfifying level shifts and additive outliers is no always as obvious as in the example above.
+Identifying level shifts and additive outliers is not always as obvious as in the example above.
 The following tables may help to identify the level shifts and additive outliers
 
 TODO (From ONS Manual)
 
-- Look at Table E5 and E6 in the output?
-These tables show the month- on-month (or quarter-on-quarter) changes in the original and seasonally adjusted estimates. In fact, a level shift will appear as a sudden large increase which is not followed by a corresponding decrease (or vice versa) in Table E5 and E6. The adjustment for the level shift effectively attempts to remove this sudden change in the level.
+-   Look at Table E5 and E6 in the output?
+    These tables show the month- on-month (or quarter-on-quarter) changes in the original and seasonally adjusted estimates.
+    In fact, a level shift will appear as a sudden large increase which is not followed by a corresponding decrease (or vice versa) in Table E5 and E6.
+    The adjustment for the level shift effectively attempts to remove this sudden change in the level.
 
-- Additive outliers can be detected by analysing Table C17 and D13 in addition to Table E5 and E6 in the output. In fact, an additive outlier will appear as one or more zeros in the period of the outlier in Table C17, which gives the final weights for the irregular component, and as a residual pattern of the irregular component presented in Table D13. In addition to inspecting these four output tables, M1, M2 and M3 statistics should be checked. M1, M2 and M3 each measure the level of the irregular component in the series compared to the trend and the seasonal components. If these fail it may indicate that outliers need to be replaced as temporary prior adjustments.
-
+-   Additive outliers can be detected by analyzing Table C17 and D13 in addition to Table E5 and E6 in the output.
+    In fact, an additive outlier will appear as one or more zeros in the period of the outlier in Table C17, which gives the final weights for the irregular component, and as a residual pattern of the irregular component presented in Table D13.
+    In addition to inspecting these four output tables, M1, M2 and M3 statistics should be checked.
+    M1, M2 and M3 each measure the level of the irregular component in the series compared to the trend and the seasonal components.
+    If these fail it may indicate that outliers need to be replaced as temporary prior adjustments.
 
 ## Confirming the reason for the level shifts or the additive outliers
 
 TODO (From ONS Manual)
 
-If the X-12-ARIMA test and the graphs of the NSA and SA series lead you to suspect a level shift or an outlier, then check which months/quarters it appears in. Question if there is any evidence for suspecting a level shift or outlier at this time point.
-If there is not a methodological, social or economic reason to explain the presence of the suspected level
-shift or outlier then do not adjust for it.
-
-
-
+If the X-13 test and the graphs of the adjusted and non-adjusted series lead you to suspect a level shift or an outlier, then check which months/quarters it appears in.
+Question if there is any evidence for suspecting a level shift or outlier at this time point.
+If there is not a methodological, social or economic reason to explain the presence of the suspected level shift or outlier then do not adjust for it.
