--- a/33-outliers.qmd
+++ b/33-outliers.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("drafting") # drafting, polishing, complete
+status("polishing", "2023-03-24", section = "Holidays")  # drafting, polishing, complete
 library(seasonal)
 library(tsbox)
 ```
