--- a/31-holidays.qmd
+++ b/31-holidays.qmd
@@ -4,7 +4,7 @@
 #| results: "asis"
 #| echo: false
 source("_common.R")
-status("drafting", "2023-01-21", section = "Holidays")  # drafting, polishing, complete
+status("polishing", "2023-03-24", section = "Holidays")  # drafting, polishing, complete
 ```
 
 ```{=html}
